# agent-mentor

./: CODE_OF_CONDUCT.md  LICENSE  MAINTAINERS.md  README.md
backend/: .env.example  .env.memory.example  README.md  package.json  proxy-config-memory.yaml  proxy-config.yaml  pyproject.toml
backend/src/agent_analytics/client/: package.json  tailwind.config.js
backend/src/agent_analytics/client/public/: index.html  manifest.json
backend/src/agent_analytics/client/src/: App.js  carbon.css  index.css  index.js
backend/src/agent_analytics/client/src/admin/: TenantAnalyticsDashboard.js
backend/src/agent_analytics/client/src/components/: AdminModal.js  AuthComponents.js  CarbonComponents.js  CarbonTheme.js  DependencyLine.js  EvalAnalytics.js  IssuesSidePanel.js  IssuesTable.js  MainComponents.js  MetricsStrip.js  ResizableColumnDivider.js  SettingsModal.js  SidePanel.js  TabbedViewer.js  TaskGroup.js  TaskGroupHeader.js  TaskHierarchyViewer.js  TaskIssuesPanel.js  TaskName.js  TaskNode.js  ThemeToggle.js  TimelineRuler.js  TopBar.js  TrajectoryViewer.js  TreeNode.js  WorkflowMetricsSidePanel.jsx  WorkflowSidePanel.jsx
backend/src/agent_analytics/client/src/workflows/: WorkflowsComponents.js  WorkflowsPage.js
backend/src/agent_analytics/core/data/: action_data.py  annotation_data.py  base_data_manager.py  element_data.py  issue_data.py  iunit_data.py  metric_data.py  recommendation_data.py  relatable_element_data.py  runnable_data.py  span_data.py  task_data.py  trace_data.py  trace_group_data.py  trace_workflow_data.py  workflow_data.py  workflow_edge_data.py  workflow_node_data.py  workflow_node_gateway.py
backend/src/agent_analytics/core/data_composite/: action.py  annotation.py  base_span.py  base_trace.py  element.py  issue.py  metric.py  recommendation.py  relatable_element.py  runnable.py  task.py  trace_group.py  trace_workflow.py  workflow.py  workflow_edge.py  workflow_node.py  workflow_node_gateway.py
backend/src/agent_analytics/core/plugin/: base_plugin.py
backend/src/agent_analytics/core/utilities/: type_resolver.py
backend/src/agent_analytics/extensions/causal_discovery/: causal_discovery_light_plugin.py  utils.py
backend/src/agent_analytics/extensions/cycle_detection/: cycles_plugin.py  detect_by_structure.py
backend/src/agent_analytics/extensions/drift_anomalies/: change_plugin.py
backend/src/agent_analytics/extensions/issue/: issue_analytics.py
backend/src/agent_analytics/extensions/object_extraction/: annotation_plugin.py  pattern_annotation_plugin.py
backend/src/agent_analytics/extensions/pattern_analysis/node_uniformity/: node_uniformity_plugin.py
backend/src/agent_analytics/extensions/spans_processing/: span_processor.py  span_traversal_orchestrator.py  span_traverser.py
backend/src/agent_analytics/extensions/spans_processing/common/: graph.py  langfuse.py  log_handler.py  utils.py
backend/src/agent_analytics/extensions/spans_processing/config/: const.py  paths.py
backend/src/agent_analytics/extensions/workflow/: workflow_metric_plugin.py  workflow_pipe_plugin.py
backend/src/agent_analytics/runtime/api/: __init__.py  config.py  dependencies.py  events.py  exceptions_handlers.py  initialization.py  main.py  tenant_config_service.py
backend/src/agent_analytics/runtime/executor/: analytics_execution_engine.py  executor_results_data_manager.py  runtime_data_validator.py
backend/src/agent_analytics/runtime/registry/: analytics_metadata.py  analytics_registry.py  registry_data_manager.py
backend/src/agent_analytics/runtime/storage/: data_object_manager.py  elasticsearch_store.py  jaeger_store.py  logical_data_manager.py  memory_store.py  mongo_store.py  open_search_store.py  store_config.py  store_interface.py
backend/src/agent_analytics/runtime/utilities/: file_loader.py
backend/src/agent_analytics/sdk/: SDK_DOCUMENTATION.md  __init__.py  client.py  models.py
backend/src/agent_analytics/sdk/resources/: __init__.py  actions.py  annotations.py  base_relatable.py  issues.py  metrics.py  metrics_old.py  recommendations.py  spans.py  task.py  trace_groups.py  trace_workflows.py  traces.py
backend/src/agent_analytics/server/: analytics_utils.py  auth.py  config.py  instana_client.py  logger.py  main.py  redirect.py  runtime_client.py  saml_auth.py  span_sender.py  trajectory_step.py
backend/src/agent_analytics/server/db/: database.py  database_sql.py  models.py  operations.py  operations_sql.py
backend/src/agent_analytics/server/routes/: __init__.py  admin_routes.py  analytics_routes.py  api_routes.py  config_routes.py  event_router.py  file_processing.py  instana_routes.py  jaeger_routes.py  jaeger_theme.py  sdk_routes.py  static_routes.py  storage_routes.py  user_routes.py
backend/src/agent_analytics/server/utils/: __init__.py  admin_queries.py  api_queries.py  generate_metadata.py  helper_utils.py  runtime_analytics.py  runtime_metrics.py  runtime_metrics_aggregations.py  test_acs.py  test_saml_config.py  user_management.py
sdk/: setup.py  (+4 more)
(+126 files in other folders)
